@@ -7,10 +7,7 @@
  */
 package io.camunda.zeebe.exporter.opensearch;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import io.camunda.zeebe.exporter.opensearch.dto.BulkIndexAction;
-import io.camunda.zeebe.exporter.opensearch.dto.BulkIndexResponse;
-import io.camunda.zeebe.exporter.opensearch.dto.BulkIndexResponse.Error;
 import io.camunda.zeebe.exporter.opensearch.dto.GetIndexStateManagementPolicyResponse;
 import io.camunda.zeebe.protocol.record.Record;
 import io.camunda.zeebe.protocol.record.ValueType;
@@ -19,13 +16,12 @@ import io.micrometer.core.instrument.MeterRegistry;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import org.apache.http.entity.EntityTemplate;
-import org.opensearch.client.Request;
-import org.opensearch.client.RestClient;
 import org.opensearch.client.json.JsonData;
 import org.opensearch.client.opensearch.OpenSearchClient;
+import org.opensearch.client.opensearch._types.ErrorCause;
 import org.opensearch.client.opensearch._types.ErrorResponse;
 import org.opensearch.client.opensearch._types.OpenSearchException;
 import org.opensearch.client.opensearch._types.Result;
@@ -33,7 +29,11 @@ import org.opensearch.client.opensearch.cluster.GetComponentTemplateRequest;
 import org.opensearch.client.opensearch.cluster.GetComponentTemplateResponse;
 import org.opensearch.client.opensearch.cluster.PutComponentTemplateRequest;
 import org.opensearch.client.opensearch.cluster.PutComponentTemplateResponse;
+import org.opensearch.client.opensearch.core.BulkRequest;
+import org.opensearch.client.opensearch.core.BulkResponse;
+import org.opensearch.client.opensearch.core.bulk.BulkResponseItem;
 import org.opensearch.client.opensearch.indices.PutIndexTemplateRequest;
+import org.opensearch.client.opensearch.indices.PutIndexTemplateResponse;
 import org.opensearch.client.opensearch.ism.Action;
 import org.opensearch.client.opensearch.ism.ActionDelete;
 import org.opensearch.client.opensearch.ism.AddPolicyRequest;
@@ -55,9 +55,7 @@ import org.opensearch.client.transport.endpoints.SimpleEndpoint;
 public class OpensearchClient implements AutoCloseable {
   public static final String ISM_INITIAL_STATE = "initial";
   public static final String ISM_DELETE_STATE = "delete";
-  private static final ObjectMapper MAPPER = new ObjectMapper();
   private final OpenSearchClient openSearchClient;
-  private final RestClient client;
   private final OpensearchExporterConfiguration configuration;
   private final TemplateReader templateReader;
   private final RecordIndexRouter indexRouter;
@@ -71,7 +69,6 @@ public class OpensearchClient implements AutoCloseable {
         configuration,
         new BulkIndexRequest(),
         OpensearchConnector.of(configuration).createClient(),
-        RestClientFactory.of(configuration),
         new RecordIndexRouter(configuration.index),
         new TemplateReader(configuration.index),
         new OpensearchMetrics(meterRegistry));
@@ -80,27 +77,11 @@ public class OpensearchClient implements AutoCloseable {
   OpensearchClient(
       final OpensearchExporterConfiguration configuration,
       final MeterRegistry meterRegistry,
-      final RestClient restClient) {
-    this(
-        configuration,
-        new BulkIndexRequest(),
-        OpensearchConnector.of(configuration).createClient(),
-        restClient,
-        new RecordIndexRouter(configuration.index),
-        new TemplateReader(configuration.index),
-        new OpensearchMetrics(meterRegistry));
-  }
-
-  OpensearchClient(
-      final OpensearchExporterConfiguration configuration,
-      final MeterRegistry meterRegistry,
-      final OpenSearchClient openSearchClient,
-      final RestClient restClient) {
+      final OpenSearchClient openSearchClient) {
     this(
         configuration,
         new BulkIndexRequest(),
         openSearchClient,
-        restClient,
         new RecordIndexRouter(configuration.index),
         new TemplateReader(configuration.index),
         new OpensearchMetrics(meterRegistry));
@@ -109,15 +90,13 @@ public class OpensearchClient implements AutoCloseable {
   OpensearchClient(
       final OpensearchExporterConfiguration configuration,
       final BulkIndexRequest bulkIndexRequest,
-      final org.opensearch.client.opensearch.OpenSearchClient openSearchClient,
-      final RestClient client,
+      final OpenSearchClient openSearchClient,
       final RecordIndexRouter indexRouter,
       final TemplateReader templateReader,
       final OpensearchMetrics metrics) {
     this.configuration = configuration;
     this.bulkIndexRequest = bulkIndexRequest;
     this.openSearchClient = openSearchClient;
-    this.client = client;
     this.indexRouter = indexRouter;
     this.templateReader = templateReader;
     this.metrics = metrics;
@@ -125,7 +104,6 @@ public class OpensearchClient implements AutoCloseable {
 
   @Override
   public void close() throws IOException {
-    client.close();
     openSearchClient._transport().close();
   }
 
@@ -199,7 +177,7 @@ public class OpensearchClient implements AutoCloseable {
             indexRouter.aliasNameForValueType(valueType));
 
     try {
-      final org.opensearch.client.opensearch.indices.PutIndexTemplateResponse response =
+      final PutIndexTemplateResponse response =
           openSearchClient.indices().putIndexTemplate(request);
       return response.acknowledged();
     } catch (final OpenSearchException | IOException e) {
@@ -228,14 +206,12 @@ public class OpensearchClient implements AutoCloseable {
   }
 
   private void exportBulk() {
-    final BulkIndexResponse response;
+    final BulkResponse response;
     try {
-      final var request = new Request("POST", "/_bulk");
-      final var body = new EntityTemplate(bulkIndexRequest);
-      request.setJsonEntity(new String(body.getContent().readAllBytes()));
-
-      response = sendRequest(request, BulkIndexResponse.class);
-    } catch (final IOException e) {
+      final BulkRequest bulkRequest =
+          BulkRequest.of(b -> b.operations(bulkIndexRequest.bulkOperations()));
+      response = openSearchClient.bulk(bulkRequest);
+    } catch (final OpenSearchException | IOException e) {
       throw new OpensearchExporterException("Failed to flush bulk", e);
     }
 
@@ -244,18 +220,27 @@ public class OpensearchClient implements AutoCloseable {
     }
   }
 
-  private void throwCollectedBulkError(final BulkIndexResponse bulkResponse) {
+  private void throwCollectedBulkError(final BulkResponse bulkResponse) {
     final var collectedErrors = new ArrayList<String>();
     bulkResponse.items().stream()
-        .flatMap(item -> Optional.ofNullable(item.index()).stream())
-        .flatMap(index -> Optional.ofNullable(index.error()).stream())
-        .collect(Collectors.groupingBy(Error::type))
+        .map(BulkResponseItem::error)
+        .filter(Objects::nonNull)
+        .collect(Collectors.groupingBy(ErrorCause::type))
         .forEach(
-            (errorType, errors) ->
-                collectedErrors.add(
-                    String.format(
-                        "Failed to flush %d item(s) of bulk request [type: %s, reason: %s]",
-                        errors.size(), errorType, errors.get(0).reason())));
+            (errorType, errors) -> {
+              final String reason;
+              final ErrorCause errorCause = errors.getFirst();
+              if (errorCause.causedBy() != null) {
+                reason = errorCause.causedBy().reason();
+              } else {
+                reason = errorCause.reason();
+              }
+
+              collectedErrors.add(
+                  String.format(
+                      "Failed to flush %d item(s) of bulk request [type: %s, reason: %s]",
+                      errors.size(), errorType, reason));
+            });
 
     throw new OpensearchExporterException("Failed to flush bulk request: " + collectedErrors);
   }
@@ -335,14 +320,6 @@ public class OpensearchClient implements AutoCloseable {
     } catch (final OpenSearchException | IOException e) {
       throw new OpensearchExporterException("Failed to remove policy from indices", e);
     }
-  }
-
-  private <T> T sendRequest(final Request request, final Class<T> responseType) throws IOException {
-    final var response = client.performRequest(request);
-    // buffer the complete response in memory before parsing it; this will give us a better error
-    // message which contains the raw response should the deserialization fail
-    final var responseBody = response.getEntity().getContent().readAllBytes();
-    return MAPPER.readValue(responseBody, responseType);
   }
 
   private boolean putIndexStateManagementPolicy(final Integer seqNo, final Integer primaryTerm) {
